src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> LET IDENTIFIER ASSIGN expression
Rule 5     statement -> PRINT LPAREN expression RPAREN
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression MULTIPLY expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> INTEGER
Rule 11    expression -> IDENTIFIER
Rule 12    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGN               : 4
DIVIDE               : 9
IDENTIFIER           : 4 11
INTEGER              : 10
LET                  : 4
LPAREN               : 5 12
MINUS                : 7
MULTIPLY             : 8
PLUS                 : 6
PRINT                : 5
RPAREN               : 5 12
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 6 7 7 8 8 9 9 12
program              : 0
statement            : 2 3
statement_list       : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . LET IDENTIFIER ASSIGN expression
    (5) statement -> . PRINT LPAREN expression RPAREN

    LET             shift and go to state 4
    PRINT           shift and go to state 5

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . LET IDENTIFIER ASSIGN expression
    (5) statement -> . PRINT LPAREN expression RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    LET             shift and go to state 4
    PRINT           shift and go to state 5

    statement                      shift and go to state 6

state 3

    (3) statement_list -> statement .

    LET             reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> LET . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 7


state 5

    (5) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 8


state 6

    (2) statement_list -> statement_list statement .

    LET             reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)


state 7

    (4) statement -> LET IDENTIFIER . ASSIGN expression

    ASSIGN          shift and go to state 9


state 8

    (5) statement -> PRINT LPAREN . expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 11

state 9

    (4) statement -> LET IDENTIFIER ASSIGN . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 14

state 10

    (12) expression -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 15

state 11

    (5) statement -> PRINT LPAREN expression . RPAREN
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 16
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20


state 12

    (10) expression -> INTEGER .

    RPAREN          reduce using rule 10 (expression -> INTEGER .)
    PLUS            reduce using rule 10 (expression -> INTEGER .)
    MINUS           reduce using rule 10 (expression -> INTEGER .)
    MULTIPLY        reduce using rule 10 (expression -> INTEGER .)
    DIVIDE          reduce using rule 10 (expression -> INTEGER .)
    LET             reduce using rule 10 (expression -> INTEGER .)
    PRINT           reduce using rule 10 (expression -> INTEGER .)
    $end            reduce using rule 10 (expression -> INTEGER .)


state 13

    (11) expression -> IDENTIFIER .

    RPAREN          reduce using rule 11 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 11 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 11 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 11 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 11 (expression -> IDENTIFIER .)
    LET             reduce using rule 11 (expression -> IDENTIFIER .)
    PRINT           reduce using rule 11 (expression -> IDENTIFIER .)
    $end            reduce using rule 11 (expression -> IDENTIFIER .)


state 14

    (4) statement -> LET IDENTIFIER ASSIGN expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    LET             reduce using rule 4 (statement -> LET IDENTIFIER ASSIGN expression .)
    PRINT           reduce using rule 4 (statement -> LET IDENTIFIER ASSIGN expression .)
    $end            reduce using rule 4 (statement -> LET IDENTIFIER ASSIGN expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20


state 15

    (12) expression -> LPAREN expression . RPAREN
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20


state 16

    (5) statement -> PRINT LPAREN expression RPAREN .

    LET             reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)
    PRINT           reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)
    $end            reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)


state 17

    (6) expression -> expression PLUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 22

state 18

    (7) expression -> expression MINUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 23

state 19

    (8) expression -> expression MULTIPLY . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 24

state 20

    (9) expression -> expression DIVIDE . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression MULTIPLY expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . INTEGER
    (11) expression -> . IDENTIFIER
    (12) expression -> . LPAREN expression RPAREN

    INTEGER         shift and go to state 12
    IDENTIFIER      shift and go to state 13
    LPAREN          shift and go to state 10

    expression                     shift and go to state 25

state 21

    (12) expression -> LPAREN expression RPAREN .

    RPAREN          reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    MULTIPLY        reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    LET             reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    PRINT           reduce using rule 12 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 12 (expression -> LPAREN expression RPAREN .)


state 22

    (6) expression -> expression PLUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 6 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 6 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 6 (expression -> expression PLUS expression .)
    LET             reduce using rule 6 (expression -> expression PLUS expression .)
    PRINT           reduce using rule 6 (expression -> expression PLUS expression .)
    $end            reduce using rule 6 (expression -> expression PLUS expression .)
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20

  ! MULTIPLY        [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 17 ]
  ! MINUS           [ shift and go to state 18 ]


state 23

    (7) expression -> expression MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 7 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 7 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 7 (expression -> expression MINUS expression .)
    LET             reduce using rule 7 (expression -> expression MINUS expression .)
    PRINT           reduce using rule 7 (expression -> expression MINUS expression .)
    $end            reduce using rule 7 (expression -> expression MINUS expression .)
    MULTIPLY        shift and go to state 19
    DIVIDE          shift and go to state 20

  ! MULTIPLY        [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 17 ]
  ! MINUS           [ shift and go to state 18 ]


state 24

    (8) expression -> expression MULTIPLY expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 8 (expression -> expression MULTIPLY expression .)
    PLUS            reduce using rule 8 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 8 (expression -> expression MULTIPLY expression .)
    MULTIPLY        reduce using rule 8 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 8 (expression -> expression MULTIPLY expression .)
    LET             reduce using rule 8 (expression -> expression MULTIPLY expression .)
    PRINT           reduce using rule 8 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 8 (expression -> expression MULTIPLY expression .)

  ! PLUS            [ shift and go to state 17 ]
  ! MINUS           [ shift and go to state 18 ]
  ! MULTIPLY        [ shift and go to state 19 ]
  ! DIVIDE          [ shift and go to state 20 ]


state 25

    (9) expression -> expression DIVIDE expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . MULTIPLY expression
    (9) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 9 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 9 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 9 (expression -> expression DIVIDE expression .)
    MULTIPLY        reduce using rule 9 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 9 (expression -> expression DIVIDE expression .)
    LET             reduce using rule 9 (expression -> expression DIVIDE expression .)
    PRINT           reduce using rule 9 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 9 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 17 ]
  ! MINUS           [ shift and go to state 18 ]
  ! MULTIPLY        [ shift and go to state 19 ]
  ! DIVIDE          [ shift and go to state 20 ]

